feat: switch request response to snake_case
